# cpp-qt-template

./: CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
src/: CMakeLists.txt  main.cpp
src/ui/qml/: Main.qml
src/ui/qml/MyAppTemplate/: qmldir
src/ui/qml/MyAppTemplate/App/: qmldir
src/ui/qml/MyAppTemplate/Controls/: qmldir
src/ui/qml/MyAppTemplate/Launcher/: Launcher.qml  qmldir
src/ui/qml/Shalrath/Controls/: qmldir
src/ui/qml/Shalrath/Launcher/: Launcher.qml  qmldir
test/: CMakeLists.txt  test_smoke.cpp
